WexGit/Wex_DX/force-app/main/default/objects/MPM4_BASE__Milestone1_Program__c/fields/Average_Net_FSR_Day__c.field-meta.xml
<CustomField>
    <fullName>Average_Net_FSR_Day__c</fullName>
    <description>Populated by Declarative Lookup Rollup Summary app</description>
    <label>Average Net FSR / Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>