WexGit/Wex_DX/force-app/main/default/objects/MPM4_BASE__Milestone1_Program__c/fields/Completed_Projects__c.field-meta.xml
<CustomField>
    <fullName>Completed_Projects__c</fullName>
    <inlineHelpText>Includes projects with no Net FSR value</inlineHelpText>
    <label>Completed Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>