WexGit/Wex_DX/force-app/main/default/objects/MPM4_BASE__Milestone1_Program__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>