WexGit/Wex_DX/force-app/main/default/objects/MPM4_BASE__Milestone1_Program__c/fields/Open_Projects__c.field-meta.xml
<CustomField>
    <fullName>Open_Projects__c</fullName>
    <description>Populated by the Declarative Lookup Rollup Summary app</description>
    <inlineHelpText>Includes projects with no Net FSR value</inlineHelpText>
    <label>Open Projects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>