WexGit/Wex_DX/force-app/main/default/objects/MPM4_BASE__Milestone1_Program__c/fields/Total_Net_FSR_Open_Projects__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_FSR_Open_Projects__c</fullName>
    <description>Updated by the Declarative Lookup Rollup Summary app</description>
    <label>Total Net FSR Open Projects</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>